--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+   
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
+    "test": "react-scripts test ",
     "eject": "react-scripts eject",
     "server": "json-server -p3001 --watch db.json"
   },
+  "jest":{
+  "moduleNameMapper": {
+    "axios": "axios/dist/node/axios.cjs"
+  }
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,10 +40,12 @@
       "not dead",
       "not op_mini all"
     ],
+    
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  
+}
 }
